[package]
name = "puddler"
version = "0.7.1"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = "4.5.49"
colored = "3.0.0"
config = "0.15.18"
crossterm = "0.29.0"
dirs = "6.0.0"
discord-presence = "2.1.0"
futures = "0.3.31"
isolanguage-1 = { version = "0.2.3", git = "https://github.com/Vernoxvernax/isolanguage-1.git" }
libmpv2 = { git = "https://github.com/Vernoxvernax/libmpv2-rs.git", version = "5.0.1" }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
toml = "0.9.8"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
libmpv2 = { git = "https://github.com/Vernoxvernax/libmpv2-rs.git", version = "5.0.1", features = ["build_libmpv"] }
